--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;1,400&display=swap" rel="stylesheet">
+    <link rel="shortcurt icon" href="../src/assets/favicon.png">
+    <title>Driven+</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
